# Polygon-collision-detection

./: CMakeLists.txt
src/: main.cxx  main.h
src/IO/: Reader.cxx  Reader.h
src/algorithm/: algorithm.cxx  algorithm.h
src/core/: Point.cxx  Point.h  Polygon.cxx  Polygon.h  constants.h  main.cxx  main.h
src/gjk/: gjk.c  gjk.h
